--- a/IndRes.LogAnalyzer.Plugins/IndRes.LogAnalyzer.Plugins.csproj
+++ b/IndRes.LogAnalyzer.Plugins/IndRes.LogAnalyzer.Plugins.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BEE1302C-F5F7-491A-94A3-D4DA166A9479}</ProjectGuid>
+    <ProjectGuid>{9150CA07-4D19-4FC7-BF15-28A17B99C2A7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IndRes.LogAnalyzer.Validation</RootNamespace>
-    <AssemblyName>IndRes.LogAnalyzer.Validation</AssemblyName>
+    <RootNamespace>IndRes.LogAnalyzer.Plugins</RootNamespace>
+    <AssemblyName>IndRes.LogAnalyzer.Plugins</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,16 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="INotificationPlugin.cs" />
+    <Compile Include="NotificationMessage.cs" />
+    <Compile Include="PluginConfiguration.cs" />
+    <Compile Include="PluginProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidationConfiguration.cs" />
-    <Compile Include="ValidationProvider.cs" />
-    <Compile Include="ValidationResult.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IndRes.LogAnalyzer.Core\IndRes.LogAnalyzer.Core.csproj">
-      <Project>{f8910d71-3ced-4a6b-aafb-d15805ac9c6d}</Project>
-      <Name>IndRes.LogAnalyzer.Core</Name>
-    </ProjectReference>
+    <Compile Include="ViolationType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
