Refactored event validation logic. Fixed mistakes. Extracted validation rules to separate classes. Added Notification option.

--- a/IndRes.LogAnalyzer/App.config
+++ b/IndRes.LogAnalyzer/App.config
@@ -7,7 +7,7 @@
     <!--XML log location.-->
     <add key="LogLocation" value="Logs//Sample.xml"/>
     <!--Notification plugin name.-->
-    <add key="notofication-plugin" value="SamplePlugin"/>
+    <add key="notification-plugin-location" value="IndRes.Samples.SamplePlugin.dll"/>
     <!--Maximum number of allowed username attempts.-->
     <add key="allowed-username-attempts" value="2"/>
     <!--Maximum allowed period (minutes) for same user name attempts.-->
