--- a/IndRes.LogAnalyzer.Core/IndRes.LogAnalyzer.Core.csproj
+++ b/IndRes.LogAnalyzer.Core/IndRes.LogAnalyzer.Core.csproj
@@ -35,10 +35,14 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.2.7.2-dev-01024\lib\net46\Serilog.dll</HintPath>
+    </Reference>
     <Reference Include="StructureMap, Version=4.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\StructureMap.4.7.0\lib\net45\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,10 +52,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILogConfiguration.cs" />
-    <Compile Include="ILogReader.cs" />
-    <Compile Include="LogConfiguration.cs" />
-    <Compile Include="LogReader.cs" />
+    <Compile Include="CommandFactory.cs" />
+    <Compile Include="CommandProcessor.cs" />
+    <Compile Include="Commands\AnalyzeLogEventsCommand.cs" />
+    <Compile Include="Commands\ApplicationExitCommand.cs" />
+    <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="Commands\ReadLogCommand.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
+    <Compile Include="Extensions\ListExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="LogReader\ILogConfiguration.cs" />
+    <Compile Include="LogReader\ILogReader.cs" />
+    <Compile Include="LogReader\LogConfiguration.cs" />
+    <Compile Include="LogReader\LogReader.cs" />
     <Compile Include="Models\Authentication.cs" />
     <Compile Include="Models\Channel.cs" />
     <Compile Include="Models\Error.cs" />
@@ -61,10 +74,23 @@
     <Compile Include="Models\Parameters.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolCommands.cs" />
+    <Compile Include="Validation\IValidator.cs" />
+    <Compile Include="Validation\MultipleUserNameLoginValidator.cs" />
+    <Compile Include="Validation\SingleUserNameAttemptValidatior.cs" />
+    <Compile Include="Validation\UserNameAttemptsNumberValidator.cs" />
+    <Compile Include="Validation\ValidationConfiguration.cs" />
+    <Compile Include="Validation\ValidationProvider.cs" />
+    <Compile Include="Validation\ValidationResult.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IndRes.LogAnalyzer.Plugins\IndRes.LogAnalyzer.Plugins.csproj">
+      <Project>{9150ca07-4d19-4fc7-bf15-28a17b99c2a7}</Project>
+      <Name>IndRes.LogAnalyzer.Plugins</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
