--- a/IndRes.LogAnalyzer.Core/packages.config
+++ b/IndRes.LogAnalyzer.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Serilog" version="2.7.2-dev-01024" targetFramework="net461" />
   <package id="StructureMap" version="4.7.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
 </packages>
