--- a/IndRes.LogAnalyzer.Core/IndRes.LogAnalyzer.Core.csproj
+++ b/IndRes.LogAnalyzer.Core/IndRes.LogAnalyzer.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CommandProcessor.cs" />
     <Compile Include="Commands\AnalyzeLogEventsCommand.cs" />
     <Compile Include="Commands\ApplicationExitCommand.cs" />
+    <Compile Include="Commands\CommandExecuteResult.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ReadLogCommand.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
