--- a/IndRes.LogAnalyzer/packages.config
+++ b/IndRes.LogAnalyzer/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Serilog" version="2.7.2-dev-01024" targetFramework="net461" />
+  <package id="Serilog.Sinks.Console" version="3.1.2-dev-00777" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="4.0.1-dev-00796" targetFramework="net461" />
   <package id="StructureMap" version="4.7.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
 </packages>
